Home page alignment fix '

--- a/src/styles/newLandingStyles.css
+++ b/src/styles/newLandingStyles.css
@@ -3,7 +3,7 @@
   width: 275px;
   height: 350px;
   top: calc(50vh - 175px);
-  left: calc(50% - 125px);
+  left: calc(50% - 137.5px);
   background: inherit;
   border-radius: 2px;
   overflow: hidden;
